--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>世界地震信息库</title>
     <link rel="stylesheet" type="text/css" href="css/sanddance-app.css">
     <link rel="stylesheet" type="text/css" href="css/sanddance-app-site.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="shortcut icon" href="./favicon.ico" />
 </head>
 
@@ -155,10 +156,16 @@
                 }
             }
         };
+        let footer
     </script>
 
     <main id="app"></main>
-
+    <div class="footer">
+        <span style="margin-right:15px">Copyright &copy;2020 All rights reserved</span>
+        <span style="margin-right:15px">北京白家疃地球科学国家野外科学观测研究站</span>
+        <span>官方网站: <a href="http://www.neobji.ac.cn/" target="_blank"
+                rel="noopener noreferrer">http://www.neobji.ac.cn/</a></span>
+    </div>
     <script src="js/react.development.js" crossorigin=""></script>
     <script src="js/react-dom.development.js" crossorigin=""></script>
     <script src="js/sanddance-app.js"></script>
