--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>世界地震信息库</title>
+    <title>ISPEC - EVS</title>
     <link rel="stylesheet" type="text/css" href="css/sanddance-app.css">
     <link rel="stylesheet" type="text/css" href="css/sanddance-app-site.css">
     <link rel="shortcut icon" href="./favicon.ico" />
